Quisk Version 4.2.27  December 2023
===================================
This release corrects the Hermes-Lite2 antenna tuner logic.  Jim, N1ADJ, has an
antenna tuner and is helping debug. Thanks Jim!

Quisk Version 4.2.26  December 2023
===================================
This release has support for the Hermes-Lite2 antenna tuner protocol. The tuner button is
on the last row of the screen at the left. Please test.

Quisk Version 4.2.25  November 2023
===================================
When using the Hermes-Lite2 at a remote location over WiFi, the Tx buffer may underflow.
I added another line to the Config/Status screen to show the number of Tx buffer errors.

Quisk Version 4.2.24  November 2023
===================================
You can now specify the WSJT-X option "--rig-name" on the Configure WSJT-X window. It used to be
fixed at "quisk". Please test.

I worked around a bug in wxPython that caused some screens to be too small. I polished the code
for the RQST and ACK bits in the Hermes-Lite2 protocol.

Quisk Version 4.2.23  September 2023
====================================
I fixed a bug in the HiQSDR when the clock is not a multiple of 48 kHz. I added more support for
the IO board.

Quisk Version 4.2.22  August 2023
=================================
This version adds more support for the Hermes Lite2 IO board.

Quisk Version 4.2.21  July 2023
===============================
This version includes Windows support for Python 3.11. It also has the new IO board register numbers.

Quisk Version 4.2.20  July 2023
===============================
I fixed a bug in the HiQSDR radio that caused the CW sidetone to play when not in CW mode.

Quisk Version 4.2.19  May 2023
==============================
I added the Flex ZZAR command to the Hamlib interface. This controls the AGC level from -20 to +120 dB.
The levels are mapped to the Quisk AGC level 0.0 to 1.0. The Flex AGC operates as a limiter but the