@@ -1,2 +1,2 @@
-#Quisk version 4.2.27
+#Quisk version 4.2.28
 from .quisk import main
