@@ -263,7 +263,6 @@ quisk.egg-info/PKG-INFO
 quisk.egg-info/SOURCES.txt
 quisk.egg-info/dependency_links.txt
 quisk.egg-info/entry_points.txt
-quisk.egg-info/requires.txt
 quisk.egg-info/top_level.txt
 sdriqpkg/README.txt
 sdriqpkg/__init__.py
