@@ -1,2 +1,0 @@
-pyusb
-wxPython
